--- a/client/src/screens/Subscriptions/Subscriptions.css
+++ b/client/src/screens/Subscriptions/Subscriptions.css
@@ -16,13 +16,20 @@ background-color:#FBD090 ;
 border-top: 2px solid #ABD1C6;
 }
 
+.category-container{
+  display: flex;
+  justify-content: center;
+
+  
+}
 
 .movies-list,
 .music-list,
 .software-list {
     border: 1.2px solid #FBD090;
     border-radius: 5px;
-    margin: 40px;
+    margin: 30px;
+    width: 300px;
 }
 
 .box-bottom-border {
@@ -41,9 +48,37 @@ border-top: 2px solid #ABD1C6;
   padding-right: 3px;
 }
 
-.add-subscription-link-button {
+.add-subscription-button-container {
   margin-bottom: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.add-subscription-button{
+  display: flex;
+  font-size: 17px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  color:#004643;
+  margin-top:4px;
+  background-color:  #F2F2F2;
+  border: 1px solid #ABD1C6;
+  border-radius: 5px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 1000px) {
+
+  .category-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  
+    
+  }
+
 }
